# osingatureengine

./: .osigcache.json  .pre-commit-config.yaml
STEP1/: .gitignore  Makefile  README.md  pyproject.toml
STEP1/.github/workflows/: ci.yml
STEP1/node_sidecar/: package-lock.json  package.json
STEP1/provis_ucg/: config.py  discovery.py  hashing.py  models.py  otel.py  runner.py
STEP1/provis_ucg/bind/: resolve.py
STEP1/provis_ucg/effects/: demo_pipeline.py  detector.py  normalizers.py
STEP1/provis_ucg/effects/rules/: core@1.yaml  express@4.yaml  fastapi@0.115.yaml  loader.py  prisma@5.yaml  schema.py  sequelize@6.yaml
STEP1/provis_ucg/flow/: cfg.py  dfg_local.py  model.py
STEP1/provis_ucg/normalize/: lift.py
STEP1/provis_ucg/parser/: ts_driver.py
STEP1/provis_ucg/storage/: db.py  schema.py  writer.py
STEP1/scripts/: pin_grammars.py
STEP1/tests/: test_discovery.py  test_effects_rules.py
osigdetector/: config.py  logging_utils.py
osigdetector/enrichment/: __init__.py  context_packer.py  json_validator.py  llm_client.py  llm_extractor.py  osig_model.py
osigdetector/ingestion/: ast_to_ucg.py  build_ucg.py  cfg_builder.py  dfg_builder.py  effect_annotator.py  parser_registry.py  provenance.py  repo_loader.py  symbol_resolver.py  ucg_store.py
osigdetector/mining/: anchor.py  miner.py
osigdetector/resolution/: __init__.py  constant_prop.py  env_resolver.py  normalizer.py  run_resolution.py  sql_resolver.py  (+1 more)
tests/: test_context_packing.py  test_effects_rules.py  test_end_to_end_step4.py  test_llm_extraction.py  test_miner.py  test_resolution.py
(+18 files in other folders)
