[project]
name = "provis-ucg"
version = "0.1.0"
description = "Step 1 — Uniform Code Graph (UCG) Parsing for Provis"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Provis", email = "dev@provis.local" }]
license = { text = "MIT" }

dependencies = [
  "tree-sitter==0.23.2",
  "duckdb==1.1.3",
  "sqlglot==25.13.0",
  "libcst==1.4.0",
  "astroid==3.2.4",
  "typing-extensions>=4.11.0",
  "opentelemetry-sdk==1.25.0",
  "opentelemetry-exporter-otlp==1.25.0",
  "opentelemetry-instrumentation==0.46b0",
  "pydantic==2.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "hypothesis==6.112.1",
  "mypy==1.11.2",
  "ruff==0.6.9",
  "black==24.8.0",
  "isort==5.13.2",
  "pre-commit==4.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B","SIM"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
